--- a/src/server/views/index.hbs
+++ b/src/server/views/index.hbs
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
+    {{{ styleTags }}}
     <script src="bundle.js" defer></script>
   </head>
   <body>
