eslint prettier. cleanup, refactor.

--- a/src/server/views/index.hbs
+++ b/src/server/views/index.hbs
@@ -6,7 +6,7 @@
     <script src="bundle.js" defer></script>
   </head>
   <body>
-    <script>const initialState = JSON.parse("{{{ initialState }}}");</script>
+    <script>window.initialState = JSON.parse("{{{ initialState }}}");</script>
     <div id="root">{{{ reactRoot }}}</div>
   </body>
 </html>
