--- a/src/server/views/index.hbs
+++ b/src/server/views/index.hbs
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Open Eyes</title>
     {{{ styleTags }}}
-    <script src="bundle.js" defer></script>
+    <script src="/assets/bundle.js" defer></script>
   </head>
   <body>
     <script>window.initialState = JSON.parse("{{{ initialState }}}");</script>
